--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Paulshields</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>Paul Shields: Software Engineer</title>
   <base href="/">
-
+  <meta name="Description" content="Paul Shields is a Software Engineer, who uses the latest technologies to create inventive and creative products." /> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
