--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Paul Shields: Software Engineer</title>
   <base href="/">
   <meta name="Description" content="Paul Shields is a Software Engineer, who uses the latest technologies to create inventive and creative products." /> 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <meta name="twitter:dnt" content="on">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
